--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">AR Furniture</string>
     <string name="game_view_content_description">Game view</string>
+    <string name="home">Home</string>
+    <string name="favorites">Favorites</string>
 </resources>
